--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/apollo": "^11.0.3",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^11.0.0",
     "@nestjs/platform-express": "^9.0.0",
@@ -32,6 +33,7 @@
     "class-validator": "^0.14.0",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.19",
+    "joi": "^17.9.1",
     "pg": "^8.10.0",
     "psql": "^0.0.1",
     "reflect-metadata": "^0.1.13",
