--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "apollo-server-express": "^3.12.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cross-env": "^7.0.3",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.19",
     "joi": "^17.9.1",
